<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/question_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/question_noriaki" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/false_button"
        app:layout_constraintEnd_toStartOf="@+id/true_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_text_view"
        app:layout_constraintWidth_percent=".3"/>

    <Button
        android:id="@+id/true_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/true_button"
        app:layout_constraintStart_toEndOf="@id/false_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_text_view"
        app:layout_constraintWidth_percent=".3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/prev_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/next_button"
        app:layout_constraintTop_toBottomOf="@id/false_button"
        android:drawableStart="@drawable/arrow_left"
        android:text="@string/prev_button"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintWidth_percent="0.3"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/prev_button"
        app:layout_constraintTop_toBottomOf="@id/false_button"
        android:drawableEnd="@drawable/arrow_right"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintWidth_percent="0.3"
        android:text="@string/next_button"
        />

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/next_button"
        app:layout_constraintWidth_percent=".5" />

</androidx.constraintlayout.widget.ConstraintLayout>